[gd_scene load_steps=8 format=2]

[ext_resource path="res://mobs/Mob.tscn" type="PackedScene" id=1]
[ext_resource path="res://mobs/sword/Sword.gd" type="Script" id=2]
[ext_resource path="res://mobs/sword/sword_active.png" type="Texture" id=3]
[ext_resource path="res://mobs/sword/sword_inactive.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 500.0

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 350.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 23.0
height = 64.0

[node name="Sword" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="DetectionArea" index="0"]
shape = SubResource( 1 )

[node name="CollisionShape2D" parent="AttackArea" index="0"]
shape = SubResource( 2 )

[node name="Sprite" parent="." index="3"]
texture = ExtResource( 4 )

[node name="Alert" parent="Sprite" index="0"]
texture = ExtResource( 3 )

[node name="HurtArea" type="Area2D" parent="Sprite" index="1"]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/HurtArea" index="0"]
position = Vector2( 17, 0 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="." index="9"]
wait_time = 0.5
one_shot = true

[node name="LungeTimer" type="Timer" parent="." index="10"]
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="." index="12"]
enabled = true
cast_to = Vector2( 2000, 0 )
collision_mask = 17
